# iotauth

./: .gitignore  .gitmodules  LICENSE.md  QUICKSTART.md  README.md  package-lock.json
AndroidAuth/: clean.sh  init.sh
accessors/: IoTAuthService.js  IoTAuthorizedClient.js  index.json
auth/: .gitignore  README.md  package-lock.json  pom.xml
entity/: .gitignore  README.md
entity/python/: API_REFERENCE.md  API_implementation_REDME.md  README.md  entity_server.py  initPythonEntities.sh  pyproject.toml  run_all_tests.py  run_tests.py
entity/python/examples/: README.md  how_to_README.md  pyClient.py  pyServer.py
entity/python/examples/configs/: pyClient.config  pyServer.config
entity/python/iotauth/: __init__.py  auth_messages.py  auth_service.py  client.py  config.py  context.py  credentials.py  crypto.py  exceptions.py  handshake.py  keys.py  messages.py  protocol.py  secure_channel.py  serialization.py  server.py  transports.py
entity/python/iotauth/serialization/: __init__.py  binary.py
entity/python/iotauth/transports/: __init__.py  tcp.py
entity/python/tests/: helpers.py  test_auth_messages.py  test_auth_service.py  test_client.py  test_config.py  test_context.py  test_credentials.py  test_crypto.py  test_handshake.py  test_keys.py  test_messages.py  test_protocol.py  test_secure_channel.py  test_serialization.py  test_server.py  test_tcp_transport.py  test_wire.py  test_wrappers.py
examples/: .gitignore  README.md  authConfigGenerator.js  authDBGenerator.js  cleanAll.sh  cleanExampleAuthsEntities.sh  common.js  credentialGenerator.js  generateAll.sh  (+5 more)
(+672 files in other folders)
